# nlppipeline

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_models.txt  showcase.py
docker/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PERFORMANCE.md
examples/: model_usage.py  monitoring_usage.py  simple_monitoring_test.py
notebooks/: quickstart.ipynb
scripts/: evaluate_model.py  fine_tune_sentiment.py  hyperparameter_search.py  prepare_training_data.py
src/: pipeline.py
src/ingestion/: README.md  __init__.py  data_loader.py  example_pipeline.py  kafka_consumer.py  requirements.txt  spark_processor.py
src/models/: README.md  __init__.py  base_model.py  entity_extractor.py  model_manager.py  sentiment_analyzer.py
src/monitoring/: README.md  __init__.py  alert_manager.py  dashboard.py  health_checker.py  metrics_collector.py
src/postprocessing/: __init__.py  aggregator.py  exporter.py  report_generator.py  visualizer.py
src/preprocessing/: README.md  __init__.py  example_usage.py  feature_extractor.py  text_cleaner.py  tokenizer.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_models.py  test_pipeline.py  test_preprocessing.py
